--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2.5|^8.0",
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.4",
+        "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5"
     },
