--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5|~8.0.0", 
+        "php": "^7.2.5|~8.0.0",
         "doctrine/dbal": "2.*",
         "fideloper/proxy": "^4.4",
         "intervention/image": "^2.7",
         "laravel/framework": "^6.20.26",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0"
     },
