--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.20.26",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.5",
+        "laravelium/sitemap": "6.*",
         "league/flysystem-aws-s3-v3": "^1.0"
     },
     "require-dev": {
